# membra_db

./: Pasted text.txt  TOKENOMICS_IDO_STATUS.md  overmanifold_at_delimited_ledger (1).llm  overmanifold_hashbase64_ledger (1).txt
OVERMANIFOLD_COLLATERAL_ASSET_LIQUIDITY_PACKAGE/: README.md  tokenization_manifest.json
OVERMANIFOLD_RECURSIVE_CHAT_CAPSULE_V2/: COLLATERAL_ASSET_LIQUIDITY_ADDENDUM.md  MERKLE_REPORT.md  OVERMANIFOLD_MEMPOOL_LLM_ROUTER_V1.md  OVERMANIFOLD_RECURSIVE_CONTINUATION_V2.llm  README.md  hash_register.csv  manifest.json  transaction_endpoint_workers.openapi.yaml
files/: BACKTEST_SUMMARY.md  LIVE_TRADING_GUIDE.md  PRODUCTION_CANDIDATE_SUMMARY.md  README.md  auth.py  benchmark_cpp_vs_python.py  config.py  cpp_ffi.py  live_trade.py  main.py  oms.py  order_book.py  place_tiny_order.py  pyproject.toml  quick_test.py  quoting_engine.py  requirements.txt  rest_client.py  risk.py  run_backtest.py  simple_benchmark.py  test_all_keys.py  test_cpp_ffi.py  test_llm_simple.py  test_ollama_alpha.py  ws_manager.py
files/app/: __init__.py  __main__.py  main.py
files/app/analytics/: __init__.py  llm_accuracy.py  performance.py
files/app/api/: __init__.py  server.py
files/app/backtest/: __init__.py  edge_decomposition.py  engine.py  fill_probability.py  l2_replay.py  market_analytics.py  metrics.py  queue_model.py  replay_engine.py  toxic_flow.py
files/app/cli/: __init__.py  l2_capture_24h.py  l2_commands.py
files/app/connectors/: __init__.py  auth.py  rest_client.py  ws_manager.py
files/app/core/: __init__.py  config.py
files/app/llm/: __init__.py  ollama_alpha_judge.py  prediction_journal.py
files/app/market_data/: __init__.py  recorder.py
files/app/oms/: __init__.py  oms.py
files/app/persistence/: __init__.py  models.py  sqlite.py
files/app/reconcile/: __init__.py  reconcile.py
files/app/risk/: __init__.py  risk.py
files/app/strategy/: __init__.py  llm_micro_burst.py  quoting_engine.py
files/data/fixtures/: sample_gate_l2.jsonl
files/data/l2_test10/: orderbook_20260517_201506.jsonl  trades_20260517_201506.jsonl  unified_20260517_201506.jsonl
files/data/l2_test11/: orderbook_20260517_201529.jsonl  trades_20260517_201529.jsonl  unified_20260517_201529.jsonl
files/data/l2_test5/: trades_20260517_201311.jsonl
files/data/l2_test6/: trades_20260517_201334.jsonl
files/data/l2_test7/: unified_20260517_201359.jsonl
files/data/l2_test8/: trades_20260517_201413.jsonl
files/data/l2_test9/: unified_20260517_201429.jsonl
files/data/llm_journal/: predictions.jsonl
files/docs/: 24H_CAPTURE_AND_EDGE_DECOMP.md  L2_CLI_GUIDE.md  LLM_ALPHA_JUDGE.md
files/tests/: __init__.py  test_api_health.py  test_auth.py  test_backtest.py  test_config.py  test_dry_run_exchange.py  test_fill_processing.py  test_l2_recorder.py  test_l2_replay.py  test_oms.py  test_order_book.py  test_performance_analytics.py  test_persistence.py  test_quote_engine.py  test_reconcile.py  test_reconciliation.py  test_replay_engine.py  test_risk.py  test_shutdown.py  test_tick_rounding.py
files_cpp/: .env.example  .gitignore  CMakeLists.txt  CONVERSION_SUMMARY.md  CPP_ARCHITECTURE.md  CPP_PORTING_STATUS.md  Dockerfile  PRODUCTION_READY_SUMMARY.md  PYTHON_CPP_COMPARISON.md  QUICKSTART.md  README.md  TODO.md  build.sh  docker-compose.yml  run_backtest.cpp  setup_deps.sh
files_cpp/include/: BookReconciliation.hpp  OrderBook.hpp  OrderPlacement.hpp  QueueModel.hpp  RiskEngine.hpp  WebSocketClient.hpp  auth.hpp  backtest_engine.hpp  config.hpp  logger.hpp  metrics.hpp  oms.hpp  order_book.hpp  quoting_engine.hpp  rest_client.hpp  risk.hpp  ws_manager.hpp
files_cpp/src/: BookReconciliation.cpp  OrderBook.cpp  OrderPlacement.cpp  QueueModel.cpp  RiskEngine.cpp  WebSocketClient.cpp  auth.cpp  backtest_engine.cpp  config.cpp  cpp_ffi_interface.cpp  main.cpp  metrics.cpp  oms.cpp  order_book.cpp  quoting_engine.cpp  rest_client.cpp  risk.cpp  ws_manager.cpp
files_cpp/tests/: test_auth.cpp  test_backtest.cpp  test_config.cpp  test_decimal.cpp  test_oms.cpp  test_order_book.cpp  test_rest_client.cpp  test_risk.cpp  test_ws_manager.cpp
llm-os/: README.md  pyproject.toml  requirements.txt
llm-os/llm_os/: __init__.py  __main__.py  economic_engine.py  governance.py  kernel.py  llm_factory.py  system_builder.py  treasury.py
mac_compute_node/: collateral_locking.py
membra-bridge-ecosystem/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  setup.sh
membra-companyos/: .gitignore  README.md  docker-compose.yml
membra-ecosystem/: README.md  main.py  requirements.txt
membra-ecosystem/membra_hybrid/cpp-core/: CMakeLists.txt  dns_resolver.cpp  dns_resolver.hpp
membra-ecosystem/membra_hybrid/cpp-core/tests/: test_dns_resolver.cpp
membra-ecosystem/membra_hybrid/ffi/: Cargo.toml  build.rs
membra-ecosystem/membra_hybrid/ffi/src/: lib.rs
membra-ecosystem/membra_hybrid/ffi/tests/: integration_test.rs
membra-ecosystem/membra_hybrid/smart-contracts/membra-dns/programs/membra-dns/: Cargo.toml
membra-ecosystem/membra_hybrid/smart-contracts/membra-dns/programs/membra-dns/src/: lib.rs
membra-finance-oracle/: README.md
membra-l3/: README.md  run_demo.py
membra-sdk-factory/: membra.network.json  sdk_factory.py
overmanifold/: .env.example  COLLATERAL_INTEGRATION_SUMMARY.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dashboard  Dockerfile.mock  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_SUMMARY.md  L1_DETAILED_TASKS.md  L1_LAUNCH_ROADMAP.md  MEMBRA_DASHBOARD_GUIDE.md  README.md  (+30 more)
overmanifold/cpp_llm_integration/: CMakeLists.txt
overmanifold/cpp_llm_integration/include/: blockchain.h  bridge.h  email_system.h  orchestrator.h  semantic_handlers.h  sms_processor.h
overmanifold/cpp_llm_integration/src/: blockchain.cpp  bridge.cpp  email_system.cpp  main.cpp  orchestrator.cpp  semantic_handlers.cpp  sms_processor.cpp
overmanifold/rust_llm_integration/: Cargo.toml
overmanifold/rust_llm_integration/src/: blockchain.rs  bridge.rs  email_system.rs  lib.rs  main.rs  orchestrator.rs  semantic_handlers.rs  semantic_test.rs  sms_processor.rs
(+322 files in other folders)
