[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-os"
version = "0.1.0"
description = "LLM OS — Autonomous operating system for LLMs to create LLMs and economically viable systems"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "LLM OS Contributors"}]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Operating Systems",
]
dependencies = [
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "typer>=0.9.0",
    "psutil>=5.9.8",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.0", "ruff>=0.1.0"]
trading = ["aiohttp>=3.9.0", "websockets>=12.0", "ccxt>=4.0.0"]
training = ["torch>=2.0.0", "numpy>=1.24.0"]

[project.scripts]
llm-os = "llm_os.__main__:main"

[project.urls]
Homepage = "https://github.com/membra-network/llm-os"
Repository = "https://github.com/membra-network/llm-os"
