[package]
name = "rust_llm_integration"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rand = "0.8"
lettre = "0.11"
openssl = "0.10"
base64 = "0.21"
url = "2.0"

[dev-dependencies]
mockito = "1.0"