[package]
name = "membra-dns-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "membra_dns_ffi"
crate-type = ["cdylib", "rlib"]

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

[build-dependencies]
cmake = "0.1"
bindgen = "0.69"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "dns_benchmark"
harness = false